<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.ac.gla.alexmtmorgan.falldetect.EthicsApprovalActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/ethics_welcome_header"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:id="@+id/scroll_ethics_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer">

        <LinearLayout
            android:id="@+id/ethics_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ethics_statement_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_1st_para"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/ethics_statement_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_2nd_para"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/dev_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/dev_email_address"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/ethics_statement_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_3rd_para"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/ethics_list_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_list_item_1"
                android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:id="@+id/ethics_list_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_list_item_2"
                android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:id="@+id/ethics_list_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_list_item_3"
                android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:id="@+id/ethics_list_item_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_list_item_4"
                android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:id="@+id/ethics_list_item_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethics_list_item_5"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>

    </ScrollView>

    <!-- Footer below -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/agree_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_button"
            android:gravity="center"
            android:onClick="onAgree"/>

    </RelativeLayout>

</RelativeLayout>
