<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="uk.ac.gla.alexmtmorgan.falldetect.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/title_activity_main"
        android:gravity="center">
    </TextView>

    <ImageView
        android:id="@+id/android_fall_detect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_logo_main_activity"
        android:layout_below="@id/title">
    </ImageView>

    <!-- Footer below -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWarning"
        android:gravity="center">

        <TextView
            android:id="@+id/warning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/notice_activity_main"
            android:gravity="center"
            android:textColor="@color/colorWarningText">
        </TextView>
    </RelativeLayout>

</RelativeLayout>
